# ditto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: backup.rs  cli.rs  config.rs  error.rs  hooks.rs  main.rs  paths.rs  symlink.rs  ui.rs
src/ops/: add.rs  diff.rs  init.rs  link.rs  mod.rs  status.rs  unlink.rs
tests/: add_test.rs  diff_test.rs  init_test.rs  link_test.rs  status_test.rs  unlink_test.rs
tests/common/: mod.rs
