[package]
name = "ditto-dots"
version = "0.1.0"
edition = "2024"
description = "A dotfile manager that transforms your dev environment"
license = "MIT"
repository = "https://github.com/pattynextdoor/ditto"
readme = "README.md"
keywords = ["dotfiles", "symlink", "cli", "stow"]
categories = ["command-line-utilities"]

[[bin]]
name = "ditto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
indicatif = "0.17"
console = "0.15"
anyhow = "1"
thiserror = "2"
dirs = "6"
similar = "2"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
